Gitlab works now

--- a/ansible/gitlab-playbook.yml
+++ b/ansible/gitlab-playbook.yml
@@ -3,17 +3,7 @@
   hosts: gitlab
   remote_user: root
 
-  tasks:
-  - name: Download gitlab repo Debian-Like
-    get_url: url=https://packages.gitlab.com/install/repositories/gitlab/gitlab-ce/script.deb.sh dest=/usr/src/gitlab.deb.sh mode=0755 validate_certs=no
-    when: ansible_os_family == "Debian"
 
-  - name: Install gitlab repo Debian-Like
-    shell: /usr/src/gitlab.deb.sh
-    when: ansible_os_family == "Debian"
-
-  - name: Install gitlab Debian-Like
-    apt: name=gitlab-ce state=latest
-    notify: configure gitlab
-    when: ansible_os_family == "Debian"
-
+  roles:
+    - common
+    - gitlab
