--- a/ansible/roles/jenkins/handlers/main.yml
+++ b/ansible/roles/jenkins/handlers/main.yml
@@ -1,1 +1,18 @@
 ---
+#- name: Set initial password
+#  copy:
+#    src: roles/jenkins/files/initialAdminPassword
+#    dest: /var/lib/jenkins/secrets/initialAdminPassword
+#    owner: jenkins
+#    group: jenkins
+#    mode: 640
+#    when: jenkinsInstall.changed
+- name: Set initial password
+  copy:
+    src: roles/jenkins/files/initialAdminPassword
+    dest: /var/lib/jenkins/secrets/initialAdminPassword
+    owner: jenkins
+    group: jenkins
+    mode: 640
+    when: jenkinsInstall.changed
+
