Sample Jenkinsfile added

--- a/pipline/Vagrantfile
+++ b/pipline/Vagrantfile
@@ -72,7 +72,7 @@ Vagrant.configure("2") do |config|
     nexus3.vm.provider :virtualbox do |v|
       v.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
       v.customize ["modifyvm", :id, "--memory", 1024]
-      v.customize ["modifyvm", :id, "--name", "nexus3"]
+#      v.customize ["modifyvm", :id, "--name", "nexus3"]
     end
   end
 
@@ -82,7 +82,7 @@ Vagrant.configure("2") do |config|
 #    nexus.vm.box_url = "ubuntu/precise64"
 
     docker.vm.network :private_network, ip: "192.168.33.14"
-    docker.vm.network :forwarded_port, guest: 22, host: 10222, id: "ssh"
+    docker.vm.network :forwarded_port, guest: 22, host: 10322, id: "ssh"
 
     docker.vm.provision "ansible" do |ansible|
        ansible.verbose = "v"
