--- a/pipline/ansible/roles/jenkins/tasks/main.yml
+++ b/pipline/ansible/roles/jenkins/tasks/main.yml
@@ -91,6 +91,46 @@
     updates_url: http://pkg.jenkins.io/
     timeout: 180
 
+- name: Install pipeline stage view plugin
+  jenkins_plugin:
+    name: pipeline-stage-view
+    url_username: admin
+    url_password: foobar
+    updates_url: http://pkg.jenkins.io/
+    timeout: 180
+
+- name: Install Docker build step plugin
+  jenkins_plugin:
+    name: docker-build-step
+    url_username: admin
+    url_password: foobar
+    updates_url: http://pkg.jenkins.io/
+    timeout: 180
+
+- name: Install Docker slaves plugin
+  jenkins_plugin:
+    name: docker-slaves
+    url_username: admin
+    url_password: foobar
+    updates_url: http://pkg.jenkins.io/
+    timeout: 180
+
+- name: Install Docker  plugin
+  jenkins_plugin:
+    name: docker-plugin
+    url_username: admin
+    url_password: foobar 
+    updates_url: http://pkg.jenkins.io/
+    timeout: 180
+
+- name: Install Docker common plugin
+  jenkins_plugin:
+    name: docker-commons
+    url_username: admin
+    url_password: foobar
+    updates_url: http://pkg.jenkins.io/
+    timeout: 180
+
 
 - name:  Restart jenkins after plugins
   service: name=jenkins enabled=yes state=restarted
