--- a/spring-boot-sample-ant/Jenkinsfile
+++ b/spring-boot-sample-ant/Jenkinsfile
@@ -1,5 +1,5 @@
 pipeline {
-     agent any
+     agent { label 'docker-agent' }
      stages {
           stage('First Stage') {
                steps {
