--- a/spring-boot-sample-ant/Jenkinsfile
+++ b/spring-boot-sample-ant/Jenkinsfile
@@ -1,5 +1,6 @@
 pipeline {
-     agent { label 'docker-agent' }
+//     agent { label 'docker-agent' }
+     agent any
      stages {
           stage('First Stage') {
                steps {
