--- a/spring-boot-sample-ant/Jenkinsfile
+++ b/spring-boot-sample-ant/Jenkinsfile
@@ -2,9 +2,9 @@ pipeline {
 //     agent { label 'docker-agent' }
      agent any
      stages {
-          stage('First Stage') {
+          stage('Checkout') {
                steps {
-                    echo 'Step 1. Hello World'
+                    git url: 'http://192.168.33.11/root/pipeline-net'
                }
           }
           stage('Second Stage') {
