--- a/spring-boot-sample-ant/Jenkinsfile
+++ b/spring-boot-sample-ant/Jenkinsfile
@@ -4,7 +4,7 @@ pipeline {
      stages {
           stage('Checkout') {
                steps {
-                    git url: 'http://192.168.33.11/root/pipeline-net'
+                    git credentialsId: 'gitlab', url: 'http://192.168.33.11/root/pipeline-net'
                }
           }
           stage('Second Stage') {
