Ant and ivy added

--- a/pipline/ansible/jenkins-playbook.yml
+++ b/pipline/ansible/jenkins-playbook.yml
@@ -7,6 +7,9 @@
     - server
     - vagrant_local
     - nginx
+    - ant
+    - ivy
     - java
-    - jenkins
+    - docker
+#    - jenkins
     - app
